--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
-
+    <script src="./bootstrap/js/jquery-3.2.1.js"></script>
+    <script src="./bootstrap/js/tether.min.js"></script>
+    <link rel="stylesheet" href="./bootstrap/bootstrap.min-3.3.7.css">
+    <script src="./bootstrap/js/bootstrap.min.js"></script>
+    
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
